syntax = "proto3";
package clientpb;
option go_package = "github.com/longzekun/specter/protobuf/clientpb";

message MTLSListenerReq {
  string Host = 1;
  uint32 Port = 2;
}

message ListenerJob {
  string ID = 1;
  string Type = 2;
  uint32 JobID = 3;
  MTLSListenerReq MTLSConf = 4;
}

message Event {
  uint32 EventType = 1;
  client Client = 2;
}

message Operator {
  bool Online = 1;
  string Name = 2;
}

message client {
  string ID = 1;
  string Name  = 2;
  Operator Operator = 3;
}

message version {
  string Version = 1;
  string Commit = 2;
  string Dirty = 3;
  string CompiledAt = 4;
  string OS = 5;
  string Arch = 6;
}

message Job {
  int32 ID = 1;
  string Name = 2;
  string Description = 3;
  string Protocol = 4;
  int32 Port = 5;
}

message Jobs {
  repeated Job Activate = 1;
}

message KillJobReq{
  uint32 ID = 1;
}