syntax = "proto3";
package rpcpb;
option go_package = "github.com/longzekun/specter/protobuf/rpcpb";

import "commonpb/common.proto";
import "clientpb/client.proto";


service SpecterRPC{
  //  network
  rpc StartMTLSListener(clientpb.MTLSListenerReq) returns (clientpb.ListenerJob);
  rpc GetAllJobs(commonpb.Empty) returns (clientpb.Jobs);
  rpc KillAllJobs(commonpb.Empty)returns(commonpb.Empty);
  rpc KillJob(clientpb.KillJobReq) returns(commonpb.Empty);

  rpc Events(commonpb.Empty) returns (stream clientpb.Event);

  rpc GetVersion(commonpb.Empty) returns (clientpb.version);

  //  specter
  rpc GetAllSessions(commonpb.Empty) returns (clientpb.Sessions);
  rpc KillSession(clientpb.KillReq) returns (commonpb.Empty);


}